--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bine ati venit la AutoLab</h1>
+    <h1>Bine ati venit la AutoLabgit status</h1>
 </body>
 </html>
