--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+ <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <nav>
         <div class="logo"></div>
-                    <a href="index.html"><i class="fa-solid fa-gears animate-animated animate__bounce"></i></a>
+                    <a href="index.html"><i class="fa-solid fa-gears animate-animated animate__bounce"></i>AutoLab</a>
         <div class="meniu">
             <a href="index.html">Home</a>
-            <a href="about.html">about</a>
+            <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
 
         </div>
