--- a/about.html
+++ b/about.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <nav>
         <div class="logo"></div>
+        <a href="index.html"><i class="fa-solid fa-gears animate-animated animate__bounce"></i>AutoLab</a>
         <div class="meniu">
             <a href="index.html">Home</a>
-            <a href="about.html">about</a>
+            <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
 
         </div>
